--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,9 @@
 # Changelog for SignsAndMemorials
 
+1.4.2 - Fixed saving and loading issues, fixed emptying text, can now be saved when minified without losing text.
+Used DeepL to update translations for ChineseSimplified
+
+
 1.4.1 - Mod updated for 1.4 and passed autotests.
 Used DeepL to update translations for French, German
 
