--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,9 @@
 # Changelog for SignsAndMemorials
 
+1.4.3 - Added wallmounted signs.
+Used DeepL to update translations for ChineseSimplified, French, German
+
+
 1.4.2 - Fixed saving and loading issues, fixed emptying text, can now be saved when minified without losing text.
 Used DeepL to update translations for ChineseSimplified
 
