--- a/Languages/English/Keyed/Settings.xml
+++ b/Languages/English/Keyed/Settings.xml
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
+  <SaM_Placeworker_OnSupport>Must be placed on a wall or rock.</SaM_Placeworker_OnSupport>
+  <SaM_Placeworker_Walkable>Must be facing a walkable tile.</SaM_Placeworker_Walkable>
+  <SaM_Placeworker_Existing>Identical building already exists.</SaM_Placeworker_Existing>
   <SaM_Settings_modVersion_label>Installed mod-version: {0}</SaM_Settings_modVersion_label>
   <SaM_Settings_category>Signs and Memorials</SaM_Settings_category>
   <SaM_Settings_editOnBuild_label>Auto-open edit</SaM_Settings_editOnBuild_label>
