Fixed impassable warning for memorial

--- a/Languages/English/Keyed/Settings.xml
+++ b/Languages/English/Keyed/Settings.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
   <SaM_Placeworker_OnSupport>Must be placed on a wall or rock.</SaM_Placeworker_OnSupport>
   <SaM_Placeworker_Walkable>Must be facing a walkable tile.</SaM_Placeworker_Walkable>
