--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for SignsAndMemorials
 
+1.5.1 - Fixed impassable warning for memorial
+
+
 1.5.0 - Mod updated for 1.5 and passed autotests
 
 
