--- a/Languages/French/DefInjected/ThingDef/Buildings_Structure.xml
+++ b/Languages/French/DefInjected/ThingDef/Buildings_Structure.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <LanguageData>
   <SaM_Sign.label>signe</SaM_Sign.label>
   <SaM_Sign.description>Un simple signe. Le texte peut Ãªtre Ã©ditÃ©.</SaM_Sign.description>
