--- a/Languages/French/Keyed/Settings.xml
+++ b/Languages/French/Keyed/Settings.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <LanguageData>
   <SaM_Settings_category>Signes et commÃ©moration</SaM_Settings_category>
   <SaM_Settings_editOnBuild_label>Ouvrir automatiquement</SaM_Settings_editOnBuild_label>
