--- a/Languages/German/DefInjected/ThingDef/Buildings_Structure.xml
+++ b/Languages/German/DefInjected/ThingDef/Buildings_Structure.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <LanguageData>
   <SaM_Sign.label>Schild</SaM_Sign.label>
   <SaM_Sign.description>Einfaches Schild. Text kann bearbeitet werden.</SaM_Sign.description>
