--- a/Languages/German/Keyed/Settings.xml
+++ b/Languages/German/Keyed/Settings.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <LanguageData>
   <SaM_Settings_category>Signs and Memorials</SaM_Settings_category>
   <SaM_Settings_editOnBuild_label>Automatisch bearbeiten</SaM_Settings_editOnBuild_label>
